# agent-api

./: .env.example  .gitignore  Dockerfile  MANUAL_TEST.md  README.md  TrustMesh_Agent_Authorization_MVP規格書.md  WEEK2_MANUAL_TEST.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 20260420_2120_initial_trustmesh_week1.py
app/: main.py
app/agents/: models.py  schemas.py  views.py
app/audit/: models.py  schemas.py  views.py
app/core/: config.py  model_registry.py
app/credentials/: models.py  schemas.py  service.py  views.py
app/crypto/: schemas.py  service.py  views.py
app/demo/: views.py
app/users/: models.py
db/: schema.sql
demos/: procurement_demo.py
docs/: API_REFERENCE.md  BETA_TESTING.md  CUSTOMER_INTERVIEW.md  ERRORS.md  GITHUB_RELEASE_CHECKLIST.md  LANDING.md  QUICKSTART.md  SDK_USAGE.md  WEEK4_SUMMARY.md
tests/: test_api_smoke.py  test_sdk_models.py
trustmesh/: __init__.py  client.py  models.py
